JSA-16/10/2018-Actualizar almacen
Funcionalidad, Falta agregar permisos

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="~/assets/css/color_skins.css">
 
     <script src="~/assets/plugins/jquery/jquery-v3.2.1.min.js"></script>
+
 </head>
 <body class="theme-black menu_dark">
     @*<div class="page-loader-wrapper">
@@ -488,6 +489,12 @@
                         </ul>
                     </li>
                     <li>
+                        <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">image_aspect_ratio</i><span>Almacen</span> </a>
+                        <ul class="ml-menu">
+                            <li>@Html.ActionLink("Existencias", "ActualizacionExistencias", "Almacen")</li>
+                        </ul>
+                    </li>
+                    <li>
                         <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">attach_money</i><span>Ventas</span> </a>
                         <ul class="ml-menu">
                             <li><a href="ui_kit.html">Ventas</a></li>
@@ -542,6 +549,6 @@
 
 <script src="~/assets/plugins/momentjs/moment.js"></script>
 <script src="~/assets/bundles/mainscripts.bundle.js"></script>
-<script src="~/assets/js/pages/forms/advanced-form-elements.js"></script>
+
 
 @Styles.Render("~/Content/css")
