--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/ActualizacionExistencias.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/ActualizacionExistencias.cshtml
@@ -1,12 +1,23 @@
 ﻿
-@model MVC.Presentacion.Models.Catalogos.UnidadMedidaDTO
+@model MVC.Presentacion.Models.AlmacenDTO
 @using PagedList.Mvc;
 @using PagedList;
+
 @{
     string EnabledAdminCentral = ViewBag.EsAdmin == true ? string.Empty : "disabled";
 }
+@Html.DevExpress().GetStyleSheets(
+        new StyleSheet { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
+        new StyleSheet { ExtensionSuite = ExtensionSuite.Editors },
+        new StyleSheet { ExtensionSuite = ExtensionSuite.GridView }
+    )
+@Html.DevExpress().GetScripts(
+        new Script { ExtensionSuite = ExtensionSuite.NavigationAndLayout },
+        new Script { ExtensionSuite = ExtensionSuite.Editors },
+        new Script { ExtensionSuite = ExtensionSuite.GridView }
+    )
 <link rel="stylesheet" href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" />
-<script language="JavaScript" type="text/javascript" src="~/assets/plugins/jquery/jquery-v3.2.1.min.js"></script>
+@*<script language="JavaScript" type="text/javascript" src="~/assets/plugins/jquery/jquery-v3.2.1.min.js"></script>*@
 <script src="~/Scripts/js/RequisicionAutorizacionJS.js"></script>
 <div class="page-loader-wrapper">
     <div class="loader">
@@ -19,7 +30,7 @@
         @using (Html.BeginForm("CrearLineaProducto", "Producto", FormMethod.Post))
             {
             @Html.HiddenFor(m => m.IdEmpresa)
-            @Html.HiddenFor(m => m.IdUnidadMedida)
+            @Html.HiddenFor(m => m.IdProducto)
             <div class="block-header">
                 <div class="row">
                     <div class="col-lg-5 col-md-5 col-sm-12">
@@ -40,55 +51,62 @@
                             <div class="body">
                                 <div class="row clearfix">
                                     <div class="col-sm-4">
-                                        <b>Gasera:</b>
-                                        @if (ViewBag.EsAdmin)
-                                        {
-                                            <select id="ddlEmpresas" name="IdEmpresa" class="form-control show-tick" data-live-search="true">
-                                                @foreach (var lst in ViewBag.Empresas)
-                                                {
-                                                    <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
-                                                }
-                                            </select>
-                                        }
-                                        else
-                                        {
-                                            <input type="text" class="form-control " disabled value="@ViewBag.Empresas" />
-                                        }
+                                        <strong>Gasera:</strong>
+                                        <div>
+                                            @if (ViewBag.EsAdmin)
+                                            {
+                                                <select id="ddlEmpresas" name="IdEmpresa" class="form-control show-tick" data-live-search="true">
+                                                    @foreach (var lst in ViewBag.Empresas)
+                                                    {
+                                                        <option value="@lst.IdEmpresa">@lst.NombreComercial</option>
+                                                    }
+                                                </select>
+                                            }
+                                            else
+                                            {
+
+                                                @ViewBag.Empresas
+                                            }
+                                        </div>
+
                                         @Html.ValidationMessageFor(m => m.IdEmpresa, "", new { @class = "alert-danger" })
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <b>Nombre del producto</b>
-                                            @Html.LabelFor(m => m.Nombre, Model.Nombre , new { @class = "form-control", placeholder = "Nombre de la unidad de medida" })
-                                            @Html.ValidationMessageFor(m => m.Nombre, "", new { @class = "alert-danger" })
+                                            <strong>Nombre del producto</strong>
+                                            <div>@Html.LabelFor(m => m.Descripcion, Model.Descripcion)</div>
+                                            
+                                            @Html.ValidationMessageFor(m => m.Descripcion, "", new { @class = "alert-danger" })
                                         </div>
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <b>Exitstencias</b>
-                                            @Html.TextBoxFor(m => m.Acronimo, new { @class = "form-control number", placeholder = "Nombre de la unidad de medida" })
-                                            @Html.ValidationMessageFor(m => m.Acronimo, "", new { @class = "alert-danger" })
+                                            <strong>Exitstencias</strong>
+                                            @Html.TextBoxFor(m => m.Cantidad, new { @class = "form-control" })
+                                            @Html.ValidationMessageFor(m => m.Cantidad, "", new { @class = "alert-danger" })
                                         </div>
                                     </div>
                                 </div>
                                 <div class="row clearfix">
                                     <div class="col-md-6">
-                                        <b>Descripción:</b>
-                                        @Html.TextBoxFor(m => m.Descripcion, new { @class = "form-control", placeholder = "Descripción" })
-                                        @Html.ValidationMessageFor(m => m.Descripcion, "", new { @class = "alert-danger" })
+                                        <div class="form-group">
+                                            <strong>Descripción:</strong>
+                                            @Html.TextBoxFor(m => m.Ubicacion, new { @class = "form-control", placeholder = "Ubicacion" })
+                                            @Html.ValidationMessageFor(m => m.Ubicacion, "", new { @class = "alert-danger" })
+                                        </div>
                                     </div>
                                     <div class="col-md-1">
                                         <b>&nbsp; </b>
                                         <div class="form-group">
                                             @if (ViewBag.EsEdicion == null)
                                             {
-                                                <button btn id="BtnCrear" formaction="CrearUnidadMedida" class="btn btn-primary btn-icon  btn-icon-mini btn-round">
-                                                    <i class="zmdi zmdi-plus"></i>
+                                                <button btn id="btnUpDate" class="btn btn-primary btn-icon  btn-icon-mini btn-round" disabled>
+                                                    <i class="zmdi zmdi-swap"></i>
                                                 </button>
                                             }
                                             else
                                             {
-                                                <button btn id="btnUpDate" formaction="EditarUnidadMedida" class="btn btn-primary btn-icon  btn-icon-mini btn-round">
+                                                <button btn id="btnUpDate" formaction="Editar" class="btn btn-primary btn-icon  btn-icon-mini btn-round">
                                                     <i class="zmdi zmdi-swap"></i>
                                                 </button>
                                             }
@@ -144,7 +162,11 @@
                                 </div>
                                 <div class="row clearfix">
                                     <div class="table-responsive">
-                                        <table class="table table table-bordered table-striped table-hover js-basic-example dataTable filterable" name="RequisicionProductos">
+
+                                        @Html.Action("gvProductosPartial")
+
+
+                                        @*<table class="table table table-bordered table-striped table-hover js-basic-example dataTable filterable" name="RequisicionProductos">
                                             <thead>
                                                 <tr>
                                                     <td><b>Categoría</b></td>
@@ -165,28 +187,23 @@
                                                         <td>
                                                             <a href="@Url.Action("EditarUnidadMedida", "Producto", new { Id = cat.IdUnidadMedida })">
                                                                 <i class="material-icons">edit</i>
-                                                                <span class="icon-name"></span>
-                                                            </a>
-                                                            <a href="@Url.Action("EliminarUnidadMedida", "Producto", new { Id = cat.IdUnidadMedida })">
-                                                                <i class="material-icons">delete</i>
-                                                                <span class="icon-name"></span>
-                                                            </a>
-
+                                                                <span class='icon-name'></span>
+                                                            </a>   
                                                         </td>
                                                     </tr>
                                                 }
                                             </tbody>
-                                        </table>
+                                        </table>*@
                                     </div>
                                 </div>
-                                <div class="row clearfix">
+                                @*<div class="row clearfix">
                                     <div class="col-md-6">
-                                        Pagina @(ViewBag.Unidades.PageCount < ViewBag.Unidades.PageNumber ? 0 : ViewBag.Unidades.PageNumber) de @ViewBag.Unidades.PageCount
+                                        Pagina @(ViewBag.Productos.PageCount < ViewBag.Productos.PageNumber ? 0 : ViewBag.Productos.PageNumber) de @ViewBag.Productos.PageCount
                                     </div>
                                     <div class="col-md-6 text-right">
-                                        @Html.PagedListPager((IPagedList)ViewBag.Unidades, page => Url.Action("UnidadMedida", new { page, @class = "btn btn-primary btn-simple" }))
+                                        @Html.PagedListPager((IPagedList)ViewBag.Productos, page => Url.Action("UnidadMedida", new { page, @class = "btn btn-primary btn-simple" }))
                                     </div>
-                                </div>
+                                </div>*@
                             </div>
                         </div>
                     </div>
