--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values-v21/styles.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/values-v21/styles.xml
@@ -9,11 +9,22 @@
         <item name="colorAccent">@color/primaryTextColor</item>
         <item name="colorPrimary">@color/colorBackgroundNavigationBar</item>
     </style>
-    <style name="SagasTheme.AppEnter" parent="Theme.AppCompat.Light">
+    <style name="AppEnter" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:navigationBarColor">@color/colorBackgroundNavigationBar</item>
         <item name="android:statusBarColor">@color/colorBackgroundStatusBar</item>
         <item name="android:colorForeground">@color/textColorSistemaLogin</item>
         <item name="colorAccent">@color/primaryTextColor</item>
-        <item name="colorPrimary">@color/colorBackgroundNavigationBar</item>
+        <item name="actionBarStyle">@style/ActionBarStyle</item>
+    </style>
+    <style name="SagasTheme.Button" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:colorButtonNormal" >@color/colorBackgroundSistemaLogin</item>
+        <item name="android:textColor">@color/textcolorButton</item>
+    </style>
+    <style name="ActionBarStyle" parent="Widget.AppCompat.ActionBar">
+        <item name="background">@color/colorBackgroundNavigationBar</item>
+        <item name="android:navigationBarColor">@color/colorBackgroundNavigationBar</item>
+    </style>
+    <style name="ActionBarTitleStyle" parent="TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textColor">@color/textcolorButton</item>
     </style>
 </resources>
