--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/ActualizacionExistencias.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/ActualizacionExistencias.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @model MVC.Presentacion.Models.AlmacenDTO
-@using PagedList.Mvc;
-@using PagedList;
+@*@using PagedList.Mvc;
+    @using PagedList;*@
 
 @{
     string EnabledAdminCentral = ViewBag.EsAdmin == true ? string.Empty : "disabled";
@@ -38,7 +38,7 @@
                         <ul class="breadcrumb padding-0">
                             <li class="breadcrumb-item"><a href="index.html"><i class="zmdi zmdi-home"></i></a></li>
                             <li class="breadcrumb-item">Almacen</li>
-                            <li class="breadcrumb-item">Actualizar Existencias</li> 
+                            <li class="breadcrumb-item">Actualizar Existencias</li>
                         </ul>
                     </div>
                 </div>
@@ -46,7 +46,7 @@
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <div class="card">
                             <div class="header">
-                                <h2><strong>Actualizacíon</strong> de existencias</h2>
+                                <h2><strong>Actualización</strong> de existencias</h2>
                             </div>
                             <div class="body">
                                 <div class="row clearfix">
@@ -68,14 +68,13 @@
                                                 @ViewBag.Empresas
                                             }
                                         </div>
-
                                         @Html.ValidationMessageFor(m => m.IdEmpresa, "", new { @class = "alert-danger" })
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group">
                                             <strong>Nombre del producto</strong>
                                             <div>@Html.LabelFor(m => m.Descripcion, Model.Descripcion)</div>
-                                            
+
                                             @Html.ValidationMessageFor(m => m.Descripcion, "", new { @class = "alert-danger" })
                                         </div>
                                     </div>
@@ -162,48 +161,45 @@
                                 </div>
                                 <div class="row clearfix">
                                     <div class="table-responsive">
-
                                         @Html.Action("gvProductosPartial")
-
-
                                         @*<table class="table table table-bordered table-striped table-hover js-basic-example dataTable filterable" name="RequisicionProductos">
-                                            <thead>
-                                                <tr>
-                                                    <td><b>Categoría</b></td>
-                                                    <td><b>Línea</b></td>
-                                                    <td><b>Producto</b></td>
-                                                    <td><b>Existencias</b></td>
-                                                    <td><b>Ubicación</b></td>
-                                                    <td><b>Acción</b></td>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                @foreach (var cat in ViewBag.Unidades)
-                                                {
+                                                <thead>
                                                     <tr>
-                                                        <td>@cat.Nombre </td>
-                                                        <td>@cat.Descripcion </td>
-                                                        <td>@cat.Acronimo</td>
-                                                        <td>
-                                                            <a href="@Url.Action("EditarUnidadMedida", "Producto", new { Id = cat.IdUnidadMedida })">
-                                                                <i class="material-icons">edit</i>
-                                                                <span class='icon-name'></span>
-                                                            </a>   
-                                                        </td>
+                                                        <td><b>Categoría</b></td>
+                                                        <td><b>Línea</b></td>
+                                                        <td><b>Producto</b></td>
+                                                        <td><b>Existencias</b></td>
+                                                        <td><b>Ubicación</b></td>
+                                                        <td><b>Acción</b></td>
                                                     </tr>
-                                                }
-                                            </tbody>
-                                        </table>*@
+                                                </thead>
+                                                <tbody>
+                                                    @foreach (var cat in ViewBag.Productos)
+                                                    {
+                                                        <tr>
+                                                            <td>@cat.Nombre </td>
+                                                            <td>@cat.Descripcion </td>
+                                                            <td>@cat.Acronimo</td>
+                                                            <td>
+                                                                <a href="@Url.Action("EditarUnidadMedida", "Producto", new { Id = cat.IdUnidadMedida })">
+                                                                    <i class="material-icons">edit</i>
+                                                                    <span class='icon-name'></span>
+                                                                </a>
+                                                            </td>
+                                                        </tr>
+                                                    }
+                                                </tbody>
+                                            </table>*@
                                     </div>
                                 </div>
                                 @*<div class="row clearfix">
-                                    <div class="col-md-6">
-                                        Pagina @(ViewBag.Productos.PageCount < ViewBag.Productos.PageNumber ? 0 : ViewBag.Productos.PageNumber) de @ViewBag.Productos.PageCount
-                                    </div>
-                                    <div class="col-md-6 text-right">
-                                        @Html.PagedListPager((IPagedList)ViewBag.Productos, page => Url.Action("UnidadMedida", new { page, @class = "btn btn-primary btn-simple" }))
-                                    </div>
-                                </div>*@
+                                        <div class="col-md-6">
+                                            Pagina @(ViewBag.Productos.PageCount < ViewBag.Productos.PageNumber ? 0 : ViewBag.Productos.PageNumber) de @ViewBag.Productos.PageCount
+                                        </div>
+                                        <div class="col-md-6 text-right">
+                                            @Html.PagedListPager((IPagedList)ViewBag.Productos, page => Url.Action("UnidadMedida", new { page, @class = "btn btn-primary btn-simple" }))
+                                        </div>
+                                    </div>*@
                             </div>
                         </div>
                     </div>
