--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -486,7 +486,7 @@
                         <a href="javascript:void(0);" class="menu-toggle"><i class="material-icons">image_aspect_ratio</i><span>Almacen</span> </a>
                         <ul class="ml-menu">
                             <li>@Html.ActionLink("Existencias", "ActualizacionExistencias", "Almacen")</li>
-                            <li>@Html.ActionLink("Entrasas-Salidas", "MovimientosAlamacen", "Almacen")</li>
+                            <li>@Html.ActionLink("Entradas-Salidas", "MovimientosAlamacen", "Almacen")</li>
                             
                         </ul>
                     </li>
