--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/ActualizacionExistencias.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/ActualizacionExistencias.cshtml
@@ -15,7 +15,14 @@
         new Script { ExtensionSuite = ExtensionSuite.GridView }
     )
 <link rel="stylesheet" href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" />
-@*<script language="JavaScript" type="text/javascript" src="~/assets/plugins/jquery/jquery-v3.2.1.min.js"></script>*@
+<script src="~/assets/plugins/bootstrap-notify/bootstrap-notify.js"></script>
+<script src="~/assets/js/pages/ui/notifications.js"></script>
+<script type="text/javascript">
+    var numReq = '@ViewBag.Confirmacion';
+    if (numReq != '') {
+        $(window).on("load", showNotification('alert-success', numReq, 'top', 'center', '', ''));
+    }
+</script>
 <script src="~/Scripts/js/RequisicionAutorizacionJS.js"></script>
 <div class="page-loader-wrapper">
     <div class="loader">
