--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_autoconsumo_inventario.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/activity_autoconsumo_inventario.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.CalibracionPipaActivity">
+    tools:context=".Activity.AutoconsumoInventarioActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -16,81 +16,51 @@
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/TVCalibracionPipaActivityTitulo"
+                android:id="@+id/TVAutoconsumoInventarioTitulo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:paddingTop="10dp"
                 android:paddingBottom="15dp"
-                android:text="@string/Calibracion"
+                android:paddingTop="15dp"
+                android:text="@string/carburaci_n_de_gas"
                 android:textAlignment="center"
-                android:textSize="24sp" />
+                android:textSize="30sp" />
 
             <TextView
-                android:id="@+id/TVCalibracionPipaActivityTituloPipa"
+                android:id="@+id/TVAutoconsumoInventarioActivitySubtitulo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
+                android:paddingBottom="45dp"
                 android:paddingTop="15dp"
+                android:text="@string/la_salida_es_desde_el_inventario_general" />
+
+            <TextView
+                android:id="@+id/TVAutoconsumoInventarioActivityUnidadEntrada"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
                 android:paddingBottom="5dp"
-                android:text="@string/selecciona_la_pipa_de_salida_calibracion" />
+                android:paddingTop="15dp"
+                android:text="@string/selecciona_la_unidad_de_entrada" />
 
             <Spinner
-                android:id="@+id/SCalibracionPipaActivityListaPipa"
+                android:id="@+id/SAutoconsumoInvetarioActivityInventario"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
                 android:padding="20dp" />
-
-            <TextView
-                android:id="@+id/TVCalibracionPipaTituloMediro"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:paddingTop="15dp"
-                android:paddingBottom="5dp"
-                android:text="@string/selecciona_el_tipo_de_medidor_porcentual" />
-
-            <Spinner
-                android:id="@+id/SCalibracionPipaActivityMedidor"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:padding="20dp" />
-
-            <TextView
-                android:id="@+id/TVCalibracionPipaActivityDestinoPuruebas"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:paddingTop="15dp"
-                android:paddingBottom="5dp"
-                android:text="@string/selecciona_destino_de_las_pruebas"
-                android:visibility="gone" />
-
-            <Spinner
-                android:id="@+id/SCalibracionPipaActivityPruebas"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp"
-                android:padding="20dp"
-                android:visibility="gone" />
 
             <Space
                 android:layout_width="match_parent"
-                android:layout_height="65dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp" />
+                android:layout_height="60dp" />
 
             <Button
-                android:id="@+id/BtnCalibracionPipaActivityGuardar"
+                android:id="@+id/BtnAutoconsumoInventarioActivityGuardar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="85dp"
@@ -98,7 +68,7 @@
                 android:backgroundTint="@color/colorButtonLogin"
                 android:text="@string/message_acept"
                 android:textColor="@color/colorTextButtonLogin"
-                android:textSize="24sp"
+                android:textSize="30sp"
                 tools:ignore="UnusedAttribute" />
         </LinearLayout>
     </ScrollView>
