--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/formulario_venta_camioneta_y_pipa.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout-large/formulario_venta_camioneta_y_pipa.xml
@@ -10,29 +10,33 @@
         android:id="@+id/SWFormularioVentaCamionetaYPipaCredito"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:text="@string/credito"
-        tools:layout_editor_absoluteX="24dp"
-        tools:layout_editor_absoluteY="8dp" />
+        android:textSize="24sp"
+        app:layout_constraintEnd_toStartOf="@+id/tableLayout2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Switch
         android:id="@+id/SWFormularioVentaCamionetaYPipaFactura"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:checked="true"
         android:text="@string/factura"
+        android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/tableLayout2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/SWFormularioVentaCamionetaYPipaCredito" />
 
     <TableLayout
         android:id="@+id/tableLayout2"
-        android:layout_width="191dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -45,7 +49,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/precio_lt" />
+                android:text="@string/precio_lt"
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/TVFormularioVentaCamionetaYPipaPrecio"
@@ -64,7 +69,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/desc_lt" />
+                android:text="@string/desc_lt"
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/TVFormularioVentaCamionetaYPipaDescuento"
@@ -83,7 +89,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/subtotal" />
+                android:text="@string/subtotal"
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/TVFormularioVentaCamionetaYPipaSubtotal"
@@ -102,7 +109,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/iva_16" />
+                android:text="@string/iva_16"
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/TVFormularioVentaCamionetaYPipaIva"
@@ -121,7 +129,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/total" />
+                android:text="@string/total"
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/TVFormularioVentaCamionetaYPipaTotal"
@@ -136,11 +145,12 @@
         android:id="@+id/BtnFormularioVentaCamionetaYPipaCancelar"
         android:layout_width="143dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:backgroundTint="@color/colorButtonLogin"
         android:text="@string/message_cancel"
         android:textColor="@color/colorTextButtonLogin"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
         tools:ignore="UnusedAttribute" />
@@ -150,10 +160,11 @@
         android:layout_width="143dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="32dp"
         android:backgroundTint="@color/colorButtonLogin"
         android:text="@string/pagar"
         android:textColor="@color/colorTextButtonLogin"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
         tools:ignore="UnusedAttribute" />
