--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_autoconsumo_inventario.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_autoconsumo_inventario.xml
@@ -21,11 +21,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:paddingBottom="15dp"
                 android:paddingTop="15dp"
+                android:paddingBottom="15dp"
                 android:text="@string/carburaci_n_de_gas"
                 android:textAlignment="center"
-                android:textSize="30sp" />
+                android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/TVAutoconsumoInventarioActivitySubtitulo"
@@ -33,9 +33,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:paddingBottom="45dp"
                 android:paddingTop="15dp"
-                android:text="@string/la_salida_es_desde_el_inventario_general" />
+                android:paddingBottom="25dp"
+                android:text="@string/la_salida_es_desde_el_inventario_general"
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/TVAutoconsumoInventarioActivityUnidadEntrada"
@@ -68,7 +69,7 @@
                 android:backgroundTint="@color/colorButtonLogin"
                 android:text="@string/message_acept"
                 android:textColor="@color/colorTextButtonLogin"
-                android:textSize="30sp"
+                android:textSize="18sp"
                 tools:ignore="UnusedAttribute" />
         </LinearLayout>
     </ScrollView>
