--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_autoconsumo_pipa.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/res/layout/activity_autoconsumo_pipa.xml
@@ -21,11 +21,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:paddingBottom="20dp"
                 android:paddingTop="20dp"
+                android:paddingBottom="20dp"
                 android:text="@string/carburaci_n_de_gas"
                 android:textAlignment="center"
-                android:textSize="24sp" />
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/TVAutoconsumoPipaActivityTituloPipa"
@@ -33,9 +33,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:paddingBottom="5dp"
                 android:paddingTop="15dp"
-                android:text="@string/selecciona_la_pipa_de_salida" />
+                android:paddingBottom="5dp"
+                android:text="@string/selecciona_la_pipa_de_salida"
+                android:textSize="14sp" />
 
             <Spinner
                 android:id="@+id/SAutoconsumoPipaActivityListaPipasSalida"
@@ -78,7 +79,7 @@
                 android:backgroundTint="@color/colorButtonLogin"
                 android:text="@string/message_acept"
                 android:textColor="@color/colorTextButtonLogin"
-                android:textSize="30sp"
+                android:textSize="18sp"
                 tools:ignore="UnusedAttribute" />
         </LinearLayout>
     </ScrollView>
